<resources>
    <string name="app_name">Trivia Hack</string>
    <string name="accessibility_desc">The usage of accessibility service for reading Question and Options from the app screen when these are appear to users.\n</string>
    <string name="desc">How to use: First take the screenshot of live question and crop the question and option using this app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="a">1:</string>
    <string name="option_a">Option 1</string>
    <string name="b">2:</string>
    <string name="option_b">Option 2</string>
    <string name="c">3:</string>
    <string name="option_c">Option 3</string>
    <string name="d">4:</string>
    <string name="option_d">Option 4</string>
    <string name="advance">Advance</string>
    <string name="simple">Simple</string>
    <string name="enter_question">Enter Question</string>
    <string name="start">START </string>
    <string name="stop">STOP</string>
    <string name="get_answer">GET ANSWER</string>
    <string name="ocr_btn_txt">Start OCR</string>
    <string name="ocr_btn_txt_4">Start OCR with option 4</string>
    <string name="ocr_btn_txt_stop">Stop OCR </string>
    <string name="giveoverlaypermission">Overlay Permission</string>
    <string name="accessibility">Accessibility Permission</string>
    <string name="supported_apps">Trivia apps in which you can take screenshot of questions, are supported</string>
    <string name="search_engine_key">search_engine_key</string>
    <string name="fallback_search_engine_key">search_fallback_engine_key</string>
    <string name="custom_search_engine">custom_search_engine</string>
    <string name="fallback_mode">fallback_mode</string>
    <string name="custom_search_engine_url">custom_search_engine_url</string>
    <string name="title_activity_profile">Select Profile</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_crop">Crop Image</string>
    <string name="language_for_tesseract">language_for_tesseract</string>
    <string name="tess_language_title">Select language for Tesseract</string>
    <string name="tess_training_data_source">tess_training_data_source</string>
    <string name="tesseract_key">tesseract_key</string>
    <string name="tesseract_title">Use Tesseract</string>
    <string name="tesseract_detaill">When this option is on, Trivia Hack will use Tesseract OCR rather than Google Vision</string>
    <string name="language">Language</string>
    <string name="grayscale_image_ocr">grayscale_image_ocr</string>
    <string name="use_gray_scale_image_for_ocr">Use Grayscale for OCR</string>
    <string name="gray_scale_detail">OCR will convert image to Grayscale(speed will decrease)</string>
    <string name="save_image_and_file_to_storage_key">save_images_and_file_to_storage_key</string>
    <string name="user_agent_key">user_agent_key</string>
    <string name="user_agent_text">user_agent_text</string>
    <string name="proxy_setting_key">proxy_setting_key</string>
    <string name="proxy_setting_title">Proxy Setting</string>
    <string name="proxy_ip_address">proxy_ip_key</string>
    <string name="proxy_port_number">proxy_port_number_key</string>
    <string name="proxy_setting_description">Use only if you know</string>
    <string name="image_storage_titile">Save ScreenShot and logs</string>
    <string name="image_storage_details">Store question and option to Storage</string>
    <string name="training_data_tgz_url_template">http://downloads.sourceforge.net/project/tesseract-ocr-alt/tesseract-ocr-3.02.%s.tar.gz</string>
    <string name="training_data_tgz_file_name_template">tesseract-ocr-3.02.%s.tar.gz</string>
    <string name="download_language_data_please_wait">Downloading OCR data files. Please wait &#8230;</string>
    <string name="installing_please_wait">Installing OCR data files.  Please wait&#8230;</string>
    <string name="language_not_exists">Training data for language %s  does not exist; cannot do recognition</string>
    <string name="fast_mode_key">fast_mode_key</string>
    <string name="fast_mode_title">Fast mode for OCR</string>
    <string name="fast_mode_summary">When this option is on Trivia Hack will find Answer fast but there may be misbehave by Trivia Hack(Not work when tesseract ocr is in use)</string>
    <string name="enlarge_image_key">enlarge_image_key</string>
    <string name="enlarge_image_summary">If enabled,Image will be enlarged(only use when ocr doesn\'t read option correctly otherwise it will not do anything but reduce performance)</string>
    <string name="enlarge_image_title">Enlarge image</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="greet">Welcome to Trivia Hack!</string>
    <string-array name="ocr_engine_lanuage">
        <item>Afrikaans</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Assamese</item>
        <item>Azerbaijani</item>
        <item>Azerbaijani-Cyrillic</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Tibetan</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Catalan;Valencian</item>
        <item>Cebuano</item>
        <item>Czech</item>
        <item>Chinese-Simplified</item>
        <item>Chinese-Traditional</item>
        <item>Cherokee</item>
        <item>Welsh</item>
        <item>Danish</item>
        <item>German</item>
        <item>Dzongkha</item>
        <item>Greek,Modern(1453-)</item>
        <item>English</item>
        <item>English,Modern(1453-)</item>
        <item>Esperanto</item>
        <item>Estonian</item>
        <item>Basque</item>
        <item>Persian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Frankish</item>
        <item>French,Middle(ca.1400–1600)</item>
        <item>Irish</item>
        <item>Galician</item>
        <item>Greek,Ancient(-1453)</item>
        <item>Gujarati</item>
        <item>Haitian;Haitian Creole</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Croatian</item>
        <item>Hungarian</item>
        <item>Inuktitut</item>
        <item>Indonesian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Italian-old</item>
        <item>Javanese</item>
        <item>Japanese</item>
        <item>Kannada</item>
        <item>Georgian</item>
        <item>Georgian-old</item>
        <item>Kazakh</item>
        <item>Central Khmer</item>
        <item>Kirghiz; Kyrgyz</item>
        <item>Korean</item>
        <item>Kurdish</item>
        <item>Lao</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Malayalam</item>
        <item>Marathi</item>
        <item>Macedonian</item>
        <item>Maltese</item>
        <item>Malay</item>
        <item>Burmese</item>
        <item>Nepali</item>
        <item>Dutch; Flemish</item>
        <item>Norwegian</item>
        <item>Oriya</item>
        <item>Panjabi;</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Pushto;</item>
        <item>Romanian;Moldavian;Moldovan</item>
        <item>Russian</item>
        <item>Sanskrit</item>
        <item>Sinhala; Sinhalese</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish;Castilian</item>
        <item>Spanish; Castilian-Old</item>
        <item>Albanian</item>
        <item>Serbian</item>
        <item>Serbian-Latin</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Syriac</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Tajik</item>
        <item>Tagalog</item>
        <item>Thai</item>
        <item>Tigrinya</item>
        <item>Turkish</item>
        <item>Uighur;;Uyghur</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Uzbek-Cyrillic</item>
        <item>Vietnamese</item>
        <item>Yiddish</item>
    </string-array>
    <string-array name="ocr_engine_language_value">
        <item>afr</item>
        <item>amh</item>
        <item>ara</item>
        <item>asm</item>
        <item>aze</item>
        <item>aze_cyrl</item>
        <item>bel</item>
        <item>ben</item>
        <item>bod</item>
        <item>bos</item>
        <item>bul</item>
        <item>cat</item>
        <item>ceb</item>
        <item>ces</item>
        <item>chi_sim</item>
        <item>chi_tra</item>
        <item>chr</item>
        <item>cym</item>
        <item>dan</item>
        <item>deu</item>
        <item>dzo</item>
        <item>ell</item>
        <item>eng</item>
        <item>enm</item>
        <item>epo</item>
        <item>est</item>
        <item>eus</item>
        <item>fas</item>
        <item>fin</item>
        <item>fra</item>
        <item>frk</item>
        <item>frm</item>
        <item>gle</item>
        <item>glg</item>
        <item>grc</item>
        <item>guj</item>
        <item>hat</item>
        <item>heb</item>
        <item>hin</item>
        <item>hrv</item>
        <item>hun</item>
        <item>iku</item>
        <item>ind</item>
        <item>isl</item>
        <item>ita</item>
        <item>ita_old</item>
        <item>jav</item>
        <item>jpn</item>
        <item>kan</item>
        <item>kat</item>
        <item>kat_old</item>
        <item>kaz</item>
        <item>khm</item>
        <item>kir</item>
        <item>kor</item>
        <item>kur</item>
        <item>lao</item>
        <item>lat</item>
        <item>lav</item>
        <item>lit</item>
        <item>mal</item>
        <item>mar</item>
        <item>mkd</item>
        <item>mlt</item>
        <item>msa</item>
        <item>mya</item>
        <item>nep</item>
        <item>nld</item>
        <item>nor</item>
        <item>ori</item>
        <item>pan</item>
        <item>pol</item>
        <item>por</item>
        <item>pus</item>
        <item>ron</item>
        <item>rus</item>
        <item>san</item>
        <item>sin</item>
        <item>slk</item>
        <item>slv</item>
        <item>spa</item>
        <item>spa_old</item>
        <item>sqi</item>
        <item>srp</item>
        <item>srp_latn</item>
        <item>swa</item>
        <item>swe</item>
        <item>syr</item>
        <item>tam</item>
        <item>tel</item>
        <item>tgk</item>
        <item>tgl</item>
        <item>tha</item>
        <item>tir</item>
        <item>tur</item>
        <item>uig</item>
        <item>ukr</item>
        <item>urd</item>
        <item>uzb</item>
        <item>uzb_cyrl</item>
        <item>vie</item>
        <item>yid</item>
    </string-array>
    <string-array name="ocr_traning_data_entries">
        <item>Fast</item>
        <item>Best</item>
        <item>Standard</item>
    </string-array>
    <string-array name="ocr_traning_data_entries_values">
        <item>fast</item>
        <item>best</item>
        <item>standard</item>
    </string-array>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
</resources>