<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Search Engine" />

    <!--Note this this list preference value will be ignored by Trivia Hack 2.0
        because i think google search engine is best for our services .
        as search engine does not allow bot search google is some time flexibly due to his high usage    -->
    <ListPreference
        android:defaultValue="https://www.google.com/search?q="
        android:entries="@array/list_preference_search_engine"
        android:entryValues="@array/list_preference_url_list"
        android:key="@string/search_engine_key"
        android:summary="Choose Search Engine(List is sorted by usability)"
        android:title="Search Engine" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/custom_search_engine"
        android:summary="Set full qualified url in below box "
        android:title="Custom Search Engine" />
    <EditTextPreference
        android:defaultValue="https://www.google.com/search?q="
        android:dependency="@string/custom_search_engine"
        android:key="@string/custom_search_engine_url"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Fill fully Qualified URL(if this is wrong than Trivia Hack will not work)"
        android:title="Custom Search Engine URL" />

    <PreferenceCategory android:title="Fallback Search Engine" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/fallback_mode"
        android:summary="If this option is turned off Triva Hack will use 'SEARCH WITH QUESTION AND OPTION TOGETHER' when search engine fails and it will not use below fallback search engine"
        android:title="Fallback Search Type" />
    <ListPreference
        android:defaultValue="https://www.startpage.com/do/search?query="
        android:dependency="@string/fallback_mode"
        android:entries="@array/list_preference_fallback_search_engine"
        android:entryValues="@array/list_preference_fallback_url_list"
        android:key="@string/fallback_search_engine_key"
        android:summary="Choose FallBack Search Engine"
        android:title="Fallback Search Engine" />
    <PreferenceCategory android:title="Tesseract OCR Settings"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/tesseract_key"
        android:summary="@string/tesseract_detaill"
        android:title="@string/tesseract_title" />

    <ListPreference
        android:defaultValue="fast"
        android:dependency="@string/tesseract_key"
        android:entries="@array/ocr_traning_data_entries"
        android:entryValues="@array/ocr_traning_data_entries_values"
        android:key="@string/tess_training_data_source"
        android:summary="Fast/Best/Standard"
        android:title="Select Tesseract Data type" />

    <ListPreference
        android:defaultValue="eng"
        android:dependency="@string/tesseract_key"
        android:entries="@array/ocr_engine_lanuage"
        android:entryValues="@array/ocr_engine_language_value"
        android:key="@string/language_for_tesseract"
        android:summary="@string/language"
        android:title="@string/tess_language_title" />


    <PreferenceCategory android:title="Other OCR Settings"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/grayscale_image_ocr"
        android:summary="@string/gray_scale_detail"
        android:title="@string/use_gray_scale_image_for_ocr" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/fast_mode_key"
        android:summary="@string/fast_mode_summary"
        android:title="@string/fast_mode_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/enlarge_image_key"
        android:summary="@string/enlarge_image_summary"
        android:title="@string/enlarge_image_title" />


    <PreferenceCategory android:title="Logs/Debug Settings"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/save_image_and_file_to_storage_key"
        android:summary="@string/image_storage_details"
        android:title="@string/image_storage_titile" />
    <PreferenceCategory android:title="Advance settings"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/user_agent_key"
        android:summary="To fake user agent"
        android:title="Custom User Agent" />
    <EditTextPreference
        android:defaultValue="Mozilla/5.0 (Linux; U; Android 4.4.2; en-us; SCH-I535 Build/KOT49H) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30"
        android:dependency="@string/user_agent_key"
        android:key="@string/user_agent_text"
        android:selectAllOnFocus="true"
        android:summary="Search in Goolge and get user agent "
        android:title="Custom User Agent Text" />

<!--    <PreferenceCategory android:title="Proxy Setting"/>-->

<!--    <SwitchPreference-->
<!--        android:defaultValue="false"-->
<!--        android:key="@string/proxy_setting_key"-->
<!--        android:summary="@string/proxy_setting_description"-->
<!--        android:title="@string/proxy_setting_title" />-->

<!--        <EditTextPreference-->
<!--        android:defaultValue="https://www.google.com/search?q="-->
<!--        android:dependency="@string/proxy_setting_key"-->
<!--        android:key="@string/proxy_ip_address"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:singleLine="true"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:summary="Enter working ip address other wise trivia hack will not work"-->
<!--        android:title="IP address" />-->

<!--        <EditTextPreference-->
<!--        android:defaultValue="https://www.google.com/search?q="-->
<!--        android:dependency="@string/proxy_setting_key"-->
<!--        android:key="@string/proxy_port_number"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:singleLine="true"-->
<!--        android:inputType="number"-->
<!--        android:summary="Port Number"-->
<!--        android:title="Port Number" />-->


</PreferenceScreen>