<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/head"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#CCFFFFFF">


    <LinearLayout
        android:id="@+id/firstOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/a"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optionA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/option_a"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstOP"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/b"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optionB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/option_b"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondOP"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/c"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optionC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/option_c"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdOP"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/d"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optionD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/option_d"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>


    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/getanswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/thirdOP"
        android:layout_alignBottom="@id/fourthOP"
        android:alpha="1"
        android:text="@string/get_answer"
        android:textAlignment="center"
        android:textColor="#00FFFFFF"
        android:textSize="14sp"
        app:pb_colorComplete="#00FFFFFF"
        app:pb_colorNormal="#00FFFFFF"
        app:pb_colorPressed="#004DCBD5"
        app:pb_colorProgress="@android:color/holo_red_dark"
        app:pb_textComplete="@string/get_answer"
        app:pb_textError="Error"
        app:pb_textProgress="Finding Answer..."

        />


</RelativeLayout>